# ATEMStreamingXML

./: .gitignore  ATEMStreamingXML.py  MANIFEST.in  Makefile  README.rst  requirements.in  requirements38.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
scripts/: Castr.sh  Splitstream.sh  restream.sh  splitstream.sh
tests/: add-alt-config.xml  add-alt-profile.xml  add-alt-server.xml  add-config-audio-bitrate.xml  add-config-bitrate.xml  add-config-keyframe-interval.xml  add-config.xml  add-profile.xml  add-server.xml  add-service.xml  conftest.py  default-84.xml  default-85.xml  default-profiles.xml  empty.xml  remove-config.xml  test_configs.py  test_help_version.py  test_profiles.py  test_servers.py  test_services.py  update-config-audio-bitrate.xml  update-config-bitrate.xml  update-config-keyframe-interval.xml  update-server.xml
