[bumpversion]
commit = True
current_version = 0.1.0
tag = True
tag_name = {new_version}

[bumpversion:file:ATEMStreamingXML.py]

[metadata]
name = ATEMStreamingXML
version = attr: ATEMStreamingXML.__version__
author = Nine More Minutes, Inc.
author_email = chris@ninemoreminutes.com
description = Utility to update ATEM Mini Pro Streaming.xml file.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = atem, blackmagic, streaming, rtmp
license = BSD
url = https://github.com/cchurch/ATEMStreamingXML
project_urls = 
	Documentation = https://github.com/cchurch/ATEMStreamingXML
	Source = https://github.com/cchurch/ATEMStreamingXML
	Tracker = https://github.com/cchurch/ATEMStreamingXML
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Web Environment
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Internet :: WWW/HTTP
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False

[options.entry_points]
console_scripts =
    ATEMStreamingXML = ATEMStreamingXML:main

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[aliases]
dev_build = clean check flake8 test egg_info sdist
release_build = clean check flake8 test egg_info -b "" sdist
test = pytest
ship_it = release_build

[pycodestyle]
ignore = E501
exclude = .git,build,dist

[flake8]
ignore = E501
exclude = .git,build,dist

[tool:pytest]
xfail_strict = true
python_files = test*.py
testpaths = ATEM
norecursedirs = .git build dist
flake8-ignore = E501
addopts = --flake8 --cov ATEMStreamingXML.py --cov-append --cov-report term-missing
