[bumpversion]
commit = True
current_version = 0.1.0
tag = True
tag_name = {new_version}

[bumpversion:file:ATEMStreamingXML.py]

[metadata]
name = ATEMStreamingXML
version = attr: ATEMStreamingXML.__version__
author = Nine More Minutes, Inc.
author_email = chris@ninemoreminutes.com
description = Utility to update ATEM Mini Pro Streaming.xml file with new streaming providers.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = atem, blackmagic, streaming, rtmp
license = BSD
url = https://github.com/cchurch/ATEMStreamingXML
project_urls = 
	Documentation = https://github.com/cchurch/ATEMStreamingXML
	Source = https://github.com/cchurch/ATEMStreamingXML
	Tracker = https://github.com/cchurch/ATEMStreamingXML
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: BSD License
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Topic :: Internet
	Topic :: Multimedia :: Video
	Topic :: Utilities

[options]
zip_safe = False

[options.entry_points]
console_scripts =
    ATEMStreamingXML = ATEMStreamingXML:main

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[aliases]
dev_build = clean check flake8 test egg_info sdist
release_build = clean check flake8 test egg_info -b "" sdist
test = pytest
ship_it = release_build

[pycodestyle]
ignore = E501
exclude = .git,build,dist

[flake8]
ignore = E501
exclude = .git,build,dist

[tool:pytest]
xfail_strict = true
python_files = test*.py
testpaths = ATEMStreamingXML.py tests
norecursedirs = .git build dist
flake8-ignore = E501
addopts = --flake8 --cov ATEMStreamingXML --cov-append --cov-report term-missing
