[bumpversion]
commit = True
current_version = 0.1.2
tag = True
tag_name = {new_version}

[bumpversion:file:ATEMStreamingXML.py]

[metadata]
name = ATEMStreamingXML
version = attr: ATEMStreamingXML.__version__
author = Nine More Minutes, Inc.
author_email = chris@ninemoreminutes.com
description = Utility to update ATEM Mini Pro Streaming.xml file with new streaming providers.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = atem, blackmagic, streaming, rtmp
license = BSD
url = https://github.com/cchurch/ATEMStreamingXML
project_urls = 
	Documentation = https://github.com/cchurch/ATEMStreamingXML
	Source = https://github.com/cchurch/ATEMStreamingXML
	Tracker = https://github.com/cchurch/ATEMStreamingXML
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: BSD License
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet
	Topic :: Multimedia :: Video
	Topic :: Utilities

[options]
py_modules = ATEMStreamingXML
zip_safe = False
setup_requires = 
	setuptools-twine

[options.entry_points]
console_scripts = 
	ATEMStreamingXML = ATEMStreamingXML:main

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[bdist_wheel]
universal = 1

[aliases]
dev_build = clean test egg_info sdist bdist_wheel twine_check
release_build = clean test egg_info -b "" sdist bdist_wheel twine_check
test = pytest
ship_it = release_build twine_upload

[pycodestyle]
ignore = E501
exclude = .git,build,dist

[flake8]
ignore = E501
exclude = .git,build,dist

[tool:pytest]
xfail_strict = true
python_files = test*.py
testpaths = ATEMStreamingXML.py tests
norecursedirs = .git build dist
flake8-ignore = E501
addopts = --flake8 --cov ATEMStreamingXML --cov-append --cov-report term-missing
